--- a/Final Project/Grocery.html
+++ b/Final Project/Grocery.html
@@ -696,12 +696,12 @@
       </div>
       <div>
       <ul>
-        <li style="font-size:24px; color:rgb(240, 226, 38); padding-top:3%;"><b>Details</b></li><br>
-        <li><b style="color:white">Mobile: &nbsp </b><a style="font-size: 16px;" href="tel:7278146025"> +91-7278146025</a></li>
-        <li><b style="color:white">Email:&nbsp </b><a style="font-size: 16px;" href="mailto:mailmetulika98@gmail.com?subject=subject text"> mailmetulika98@gmail.com </a></li>
-        <li><b style="color:white">Linkedin:&nbsp </b><a  style="font-size: 16px;"href="https://www.linkedin.com/in/tulika-panjal-037507193"> www.linkedin.com/in/tulika-panjal-037507193</a></li>
-        <li><b style="color:white">Instagram:&nbsp </b><a  style="font-size: 16px;"href="https://www.instagram.com/rong_tuli_7"> www.instagram.com/rong_tuli_7</a></li>
-        <li><b style="color:white">Facebook: &nbsp</b><a  style="font-size: 16px;"href="https://www.fb.com/tulikapanjal.07"> www.fb.com/tulikapanjal.07 </a></li>
+        <li style="color:rgb(240, 226, 38); padding-top:.5%;"><h3><b>Details</b></h3></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Mobile: &nbsp </h4></b><a href="tel:0123456789"> +91-0123456789</a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Email:&nbsp </h4></b><a href="mailto:example@gmail.com?subject=subject text"> example@gmail.com </a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Linkedin:&nbsp</h4> </b><a  "href="https://www.linkedin.com/in/tulika-panjal-037507193"> www.linkedin.com/in/tulika-panjal-037507193</a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Instagram:&nbsp </h4></b><a  "href="https://www.instagram.com"> www.instagram.com</a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Facebook: &nbsp</h4></b><a  "href="https://www.fb.com"> www.fb.com</a></li>
       </ul><br>
       </div>
     </div>
@@ -709,7 +709,6 @@
       <center>
       Designed by <b> Tulika Panjal </b>
       <br>
-      <a href="mailto:mailmetulika98@gmail.com?subject=subject text"> mailmetulika98@gmail.com </a>
       </center>
     </footer>
         <script src="script.js"></script>
