--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -206,11 +206,11 @@
       <div>
       <ul>
         <li style="color:rgb(240, 226, 38); padding-top:.5%;"><h3><b>Details</b></h3></li>
-        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Mobile: &nbsp </h4></b><a href="tel:7278146025"> +91-7278146025</a></li>
-        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Email:&nbsp </h4></b><a href="mailto:mailmetulika98@gmail.com?subject=subject text"> mailmetulika98@gmail.com </a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Mobile: &nbsp </h4></b><a href="tel:0123456789"> +91-0123456789</a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Email:&nbsp </h4></b><a href="mailto:example@gmail.com?subject=subject text"> example@gmail.com </a></li>
         <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Linkedin:&nbsp</h4> </b><a  "href="https://www.linkedin.com/in/tulika-panjal-037507193"> www.linkedin.com/in/tulika-panjal-037507193</a></li>
-        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Instagram:&nbsp </h4></b><a  "href="https://www.instagram.com/rong_tuli_7"> www.instagram.com/rong_tuli_7</a></li>
-        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Facebook: &nbsp</h4></b><a  "href="https://www.fb.com/tulikapanjal.07"> www.fb.com/tulikapanjal.07</a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Instagram:&nbsp </h4></b><a  "href="https://www.instagram.com"> www.instagram.com</a></li>
+        <li><b style="color:white"><h4 style="display:inline;">&nbsp&nbsp Facebook: &nbsp</h4></b><a  "href="https://www.fb.com"> www.fb.com</a></li>
       </ul><br>
       </div>
     </div>
@@ -218,7 +218,6 @@
       <center>
       Designed by <b> Tulika Panjal </b>
       <br>
-      <a href="mailto:mailmetulika98@gmail.com?subject=subject text"> mailmetulika98@gmail.com </a>
       </center>
     </footer>
     
