--- a/Final Project/AboutUs.html
+++ b/Final Project/AboutUs.html
@@ -179,10 +179,10 @@ image and identity.</p>
         I'm a Website Developer and I love to do it.
       </li>
       <li>
-        <b>Email:</b><a href="mailto:mailmetulika98@gmail.com?subject=subject text"> mailmetulika98@gmail.com </a>
+        <b>Email:</b><a href="mailto:examle@gmail.com?subject=subject text"> example@gmail.com </a>
       </li>
       <li>
-        <b>Mobile:</b><a href="tel:7278146025"> +91-7278146025</a>
+        <b>Mobile:</b><a href="tel:0123456789"> +91-0123456789</a>
       </li>
       </center>
     </ul>
